
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,int) ;
 scalar_t__ shellcode ;
 scalar_t__ strlen (scalar_t__) ;

int main()
{

 printf("Shellcode Length:  %d\n", (int)strlen(shellcode));
 int *ret;
 ret = (int *) &ret + 2;
 (*ret) = (int) shellcode;

 return 0;
}
