; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_37069.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_37069.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"Shellcode Length:  %d\0A\00", align 1
@shellcode = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 0, i32* %1, align 4
  %3 = load i64, i64* @shellcode, align 8
  %4 = call i64 @strlen(i64 %3)
  %5 = trunc i64 %4 to i32
  %6 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = bitcast i32** %2 to i32*
  %8 = getelementptr inbounds i32, i32* %7, i64 2
  store i32* %8, i32** %2, align 8
  %9 = load i64, i64* @shellcode, align 8
  %10 = trunc i64 %9 to i32
  %11 = load i32*, i32** %2, align 8
  store i32 %10, i32* %11, align 4
  ret i32 0
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i64 @strlen(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
